--- a/kubernetes-manifests/frontend/deployment.yaml
+++ b/kubernetes-manifests/frontend/deployment.yaml
@@ -25,10 +25,17 @@ spec:
       - name: ecr-registry-secret
       containers:
       - name: frontend
-        image: 167365792572.dkr.ecr.us-west-2.amazonaws.com/frontend:1
+        image: 039612844346.dkr.ecr.us-west-2.amazonaws.com/frontend:1
         imagePullPolicy: Always
         env:
           - name: REACT_APP_BACKEND_URL
             value: "http://api.dovz.shop/api/notes/"
         ports:
         - containerPort: 3000
+        resources:
+          requests:
+            memory: "128Mi"
+            cpu: "250m"
+          limits:
+            memory: "256Mi"
+            cpu: "500m"
